prepare for work with kubernates.